fix page width not affecting header and footer missed adding the user setting to these templates also do not allow the 85pct setting on mobile. should not happen as the option does not show on mobile but when going from large view to small it was being kept, which was not intended

--- a/assets/styles/layout/_layout.scss
+++ b/assets/styles/layout/_layout.scss
@@ -15,8 +15,10 @@ body {
     max-width: 100%;
   }
 
-  &.width--auto {
-    max-width: 85%;
+  @include media-breakpoint-up(lg) {
+    &.width--auto {
+      max-width: 85%;
+    }
   }
 }
 
